# bilicast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  config.yaml.example  pyproject.toml  pyrightconfig.json
.github/workflows/: run_pytest.yaml
src/: __init__.py  config.py  database.py  downloader.py  jobs.py  main.py
tests/: test_main.py
